# build/swagger.json
@@ -7,8 +7,32 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"ISetDeviceInfoResponse": {
-				"type": "boolean"
+			"UserAttributes": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"profileImgUrl": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"email",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
 			},
 			"Error": {
 				"properties": {
@@ -28,6 +52,9 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"ISetDeviceInfoResponse": {
+				"type": "boolean"
 			},
 			"ISetDeviceInfoBody": {
 				"properties": {
@@ -92,6 +119,46 @@
 		"contact": {}
 	},
 	"paths": {
+		"/v1/users/user": {
+			"get": {
+				"operationId": "GetUserById",
+				"responses": {
+					"409": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/UserAttributes"
+										},
+										{
+											"$ref": "#/components/schemas/Error"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/v1/stats/deviceinfo": {
 			"post": {
 				"operationId": "SetDeviceInfo",
